k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-app
spec:
  serviceName: node-app
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: node-app
      containers:
      - name: node-app
        image: 504649076991.dkr.ecr.us-west-1.amazonaws.com/nodejs-eks-repo:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /usr/src/app/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ebs-sc
      resources:
        requests:
          storage: 4Gi
